--- a/src/app/commons/components/container/components/header/header.component.html
+++ b/src/app/commons/components/container/components/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 	<header class="header">
-		<div class="header__logo">
+		<div class="header__logo" routerLink="/">
 			<img src="assets/images/music-events.png" alt="music-events" />
 			<h3>MUSIC STORE</h3>
 		</div>
@@ -10,8 +10,8 @@
 		</div>
 
 		<div>
-			<button mat-button color="primary">INGRESAR</button>
-			<button mat-button color="accent">REGÍSTRATE</button>
+			<button mat-button color="primary" routerLink="/login">INGRESAR</button>
+			<button mat-button color="accent" routerLink="/register">REGÍSTRATE</button>
 		</div>
 
 		<!-- <div class="header__user">
