--- a/src/app/commons/components/container/container.component.html
+++ b/src/app/commons/components/container/container.component.html
@@ -1,23 +1,13 @@
 <div class="container">
 	<div class="header">
 		<div class="header__content">
-			<app-header></app-header>
+			<app-header />
 		</div>
 	</div>
 	<div class="container__content">
 		<main class="main">
-			<!-- <app-register-page></app-register-page> -->
-			<!-- <app-recovery-password-page></app-recovery-password-page> -->
-			<!-- <app-login-page></app-login-page> -->
-			<!-- <app-home-page></app-home-page> -->
-			<!-- <app-maintenance></app-maintenance> -->
-			<!-- <app-buy-page></app-buy-page> -->
-			<!-- <app-my-account></app-my-account> -->
-			<!-- <app-restore-password-page></app-restore-password-page> -->
-			<!-- <app-maintenance-buy-page></app-maintenance-buy-page> -->
-			<!-- <app-maintenance-reports></app-maintenance-reports> -->
-			<!-- <app-maintenance-events-page></app-maintenance-events-page> -->
+			<router-outlet />
 		</main>
 	</div>
-	<app-footer></app-footer>
+	<app-footer />
 </div>
