--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -16,13 +16,13 @@
 					</mat-form-field>
 
 					<div class="content__login flex-column">
-						<span>¿Olvidaste tu contraseña?</span>
-						<button mat-raised-button color="primary">INGRESAR</button>
+						<span routerLink="/recovery">¿Olvidaste tu contraseña?</span>
+						<button type="button" mat-raised-button color="primary" routerLink="/maintenance">INGRESAR</button>
 					</div>
 
 					<div class="content__register">
 						<span>Si no tienes una cuenta</span>
-						<a>regístrate</a>
+						<a routerLink="/register">regístrate</a>
 					</div>
 				</form>
 			</mat-card-content>
