--- a/src/app/pages/my-account/my-account.component.html
+++ b/src/app/pages/my-account/my-account.component.html
@@ -2,5 +2,5 @@
 	<div class="container__menu">
 		<app-card-menus></app-card-menus>
 	</div>
-	<app-account-change-password-page></app-account-change-password-page>
+	<router-outlet></router-outlet>
 </div>
