--- a/src/app/pages/recovery-password-page/recovery-password-page.component.html
+++ b/src/app/pages/recovery-password-page/recovery-password-page.component.html
@@ -14,17 +14,26 @@
 						<input matInput type="email" />
 					</mat-form-field>
 
-					<button mat-raised-button color="primary">ENVIAR</button>
+					<button
+						mat-raised-button
+						color="primary"
+						type="button"
+						routerLink="/restore/myemailPathParam"
+						[queryParams]="{ id: 1, value: 'hello' }"
+						[state]="{ token: 'mytoken' }"
+					>
+						ENVIAR
+					</button>
 
 					<div>
 						<div class="content__redirect">
 							<span>Si ya tienes una cuenta</span>
-							<a>ingresa</a>
+							<a routerLink="/login">ingresa</a>
 						</div>
 
 						<div class="content__redirect">
 							<span>Si no tienes una cuenta</span>
-							<a>regístrate</a>
+							<a routerLink="/register">regístrate</a>
 						</div>
 					</div>
 				</form>
