--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -12,8 +12,8 @@
 </div>
 
 <div class="cards">
-	<app-card-event></app-card-event>
-	<app-card-event></app-card-event>
-	<app-card-event></app-card-event>
-	<app-card-event></app-card-event>
+	<app-card-event />
+	<app-card-event />
+	<app-card-event />
+	<app-card-event />
 </div>
