--- a/src/app/pages/maintenance/maintenance.component.html
+++ b/src/app/pages/maintenance/maintenance.component.html
@@ -1,8 +1,6 @@
 <div class="container flex-column">
 	<div class="container__menu">
-		<app-card-menus></app-card-menus>
+		<app-card-menus />
 	</div>
-	<!-- <app-maintenance-buy-page></app-maintenance-buy-page> -->
-	<!-- <app-maintenance-events-page></app-maintenance-events-page> -->
-	<!-- <app-maintenance-reports></app-maintenance-reports> -->
+	<router-outlet />
 </div>
