--- a/src/app/pages/recovery-password-page/recovery-password-page.component.html
+++ b/src/app/pages/recovery-password-page/recovery-password-page.component.html
@@ -28,12 +28,12 @@
 					<div>
 						<div class="content__redirect">
 							<span>Si ya tienes una cuenta</span>
-							<a routerLink="/login">ingresa</a>
+							<a [routerLink]="pathLogin">ingresa</a>
 						</div>
 
 						<div class="content__redirect">
 							<span>Si no tienes una cuenta</span>
-							<a routerLink="/register">regístrate</a>
+							<a [routerLink]="pathRegister">regístrate</a>
 						</div>
 					</div>
 				</form>
