--- a/src/app/pages/register-page/register-page.component.html
+++ b/src/app/pages/register-page/register-page.component.html
@@ -53,7 +53,7 @@
 
 					<div class="content__register">
 						<span>Si ya tienes una cuenta </span>
-						<a routerLink="/login">ingresa</a>
+						<a [routerLink]="pathLogin">ingresa</a>
 					</div>
 				</form>
 			</mat-card-content>
