--- a/src/app/pages/restore-password-page/restore-password-page.component.html
+++ b/src/app/pages/restore-password-page/restore-password-page.component.html
@@ -17,12 +17,12 @@
 					<button mat-raised-button color="primary">RESTABLECER</button>
 
 					<div>
-						<div class="content__redirect" routerLink="/login">
+						<div class="content__redirect" [routerLink]="pathLogin">
 							<span>Si ya tienes una cuenta</span>
 							<a>ingresa</a>
 						</div>
 
-						<div class="content__redirect" routerLink="/register">
+						<div class="content__redirect" [routerLink]="pathRegister">
 							<span>Si no tienes una cuenta</span>
 							<a>regístrate</a>
 						</div>
