--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -2,7 +2,9 @@
 	<h2>Compra tus entradas y disfruta!</h2>
 	<div class="container">
 		<mat-card class="container__card custom-card flex-column">
-			<mat-card-title><h4>INICIO DE SESIÓN</h4></mat-card-title>
+			<mat-card-title
+				><h4>{{ title | uppercase }}</h4></mat-card-title
+			>
 			<mat-card-content>
 				<form class="content flex-column" autocomplete="off">
 					<mat-form-field appearance="outline">
@@ -16,13 +18,13 @@
 					</mat-form-field>
 
 					<div class="content__login flex-column">
-						<span routerLink="/recovery">¿Olvidaste tu contraseña?</span>
-						<button type="button" mat-raised-button color="primary" routerLink="/maintenance">INGRESAR</button>
+						<span [routerLink]="pathRecovery">¿Olvidaste tu contraseña?</span>
+						<button mat-raised-button color="primary" routerLink="/maintenance">INGRESAR</button>
 					</div>
 
 					<div class="content__register">
 						<span>Si no tienes una cuenta</span>
-						<a routerLink="/register">regístrate</a>
+						<a [routerLink]="pathRegister">regístrate</a>
 					</div>
 				</form>
 			</mat-card-content>
