--- a/src/app/commons/components/card-menus/card-menus.component.html
+++ b/src/app/commons/components/card-menus/card-menus.component.html
@@ -1,20 +1,13 @@
 <div class="container">
-	<div class="container__card custom-card flex-column">
-		<img src="assets/images/card-menus/buys.png" />
-		<span>VENTAS</span>
-	</div>
-
-	<div class="container__card custom-card flex-column">
-		<img src="assets/images/card-menus/events.png" />
-		<span>EVENTOS</span>
-	</div>
-
-	<div class="container__card custom-card flex-column">
-		<img src="assets/images/card-menus/genres.png" />
-		<span>GENEROS</span>
-	</div>
-	<div class="container__card custom-card flex-column">
-		<img src="assets/images/card-menus/statistics.png" />
-		<span>REPORTES</span>
+	<div
+		class="container__card custom-card flex-column"
+		*ngFor="let menu of menus"
+		[routerLink]="menu.path"
+		routerLinkActive="container__card--active"
+		[routerLinkActiveOptions]="{ exact: true }"
+		(click)="clickMenu(menu)"
+	>
+		<img src="{{ 'assets/images/card-menus/' + menu.nameImage }} " />
+		<span>{{ menu.title }} </span>
 	</div>
 </div>
