--- a/src/app/commons/components/container/components/header/header.component.html
+++ b/src/app/commons/components/container/components/header/header.component.html
@@ -10,8 +10,8 @@
 		</div>
 
 		<div>
-			<button mat-button color="primary" routerLink="/login">INGRESAR</button>
-			<button mat-button color="accent" routerLink="/register">REGÍSTRATE</button>
+			<button mat-button color="primary" [routerLink]="loginPath">INGRESAR</button>
+			<button mat-button color="accent" [routerLink]="registerPath">REGÍSTRATE</button>
 		</div>
 
 		<!-- <div class="header__user">
