--- a/src/app/pages/recovery-password-page/recovery-password-page.component.html
+++ b/src/app/pages/recovery-password-page/recovery-password-page.component.html
@@ -3,40 +3,35 @@
 
 	<div class="container">
 		<mat-card class="container__card custom-card flex-column">
-			<mat-card-title>
-				<h4>RECUPERAR</h4>
-			</mat-card-title>
+			<mat-card-content>
+				<mat-card-title>
+					<h4>RECUPERAR</h4>
+				</mat-card-title>
 
-			<mat-card-content class="card-content">
-				<form class="content flex-column" autocomplete="off">
-					<mat-form-field appearance="outline">
-						<mat-label>E-mail</mat-label>
-						<input matInput type="email" />
-					</mat-form-field>
+				<mat-card-content class="card-content">
+					<form class="content flex-column" autocomplete="off" [formGroup]="formGroup" (ngSubmit)="clickSendEmail()">
+						<mat-form-field appearance="outline">
+							<mat-label>E-mail</mat-label>
+							<input matInput type="email" formControlName="email" />
+							<mat-error *ngIf="emailField.hasError('required')"> El e-mail es requerido </mat-error>
+							<mat-error *ngIf="emailField.hasError('email')"> Ingrese un e-mail valido </mat-error>
+						</mat-form-field>
 
-					<button
-						mat-raised-button
-						color="primary"
-						type="button"
-						routerLink="/restore/myemailPathParam"
-						[queryParams]="{ id: 1, value: 'hello' }"
-						[state]="{ token: 'mytoken' }"
-					>
-						ENVIAR
-					</button>
+						<button mat-raised-button color="primary" [disabled]="disabledButton">ENVIAR</button>
 
-					<div>
-						<div class="content__redirect">
-							<span>Si ya tienes una cuenta</span>
-							<a [routerLink]="pathLogin">ingresa</a>
+						<div>
+							<div class="content__redirect">
+								<span>Si ya tienes una cuenta</span>
+								<a [routerLink]="pathLogin">ingresa</a>
+							</div>
+
+							<div class="content__redirect">
+								<span>Si no tienes una cuenta</span>
+								<a [routerLink]="pathRegister">regístrate</a>
+							</div>
 						</div>
-
-						<div class="content__redirect">
-							<span>Si no tienes una cuenta</span>
-							<a [routerLink]="pathRegister">regístrate</a>
-						</div>
-					</div>
-				</form>
+					</form>
+				</mat-card-content>
 			</mat-card-content>
 		</mat-card>
 	</div>
