--- a/src/app/pages/restore-password-page/restore-password-page.component.html
+++ b/src/app/pages/restore-password-page/restore-password-page.component.html
@@ -3,28 +3,29 @@
 
 	<div class="container">
 		<mat-card class="container__card custom-card flex-column">
-			<mat-card-title>
-				<h4>RESTABLECER</h4>
-			</mat-card-title>
-			<mat-card-content class="card-content">
-				<form class="content flex-column" autocomplete="off">
+			<mat-card-title><h4>RECUPERAR</h4></mat-card-title>
+			<mat-card-content class="content">
+				<form class="content flex-column" autocomplete="off" [formGroup]="formGroup" (ngSubmit)="clickRestore()">
 					<mat-form-field appearance="outline">
 						<mat-label>Nueva Contraseña</mat-label>
-						<input matInput type="password" />
-						<mat-error>La contraseña es requerido </mat-error>
+						<input matInput type="password" formControlName="password" />
+						<mat-error *ngIf="passwordField.hasError('required')">La contraseña es requerida </mat-error>
+						<mat-error *ngIf="passwordField.hasError('customPasswordValidator')">
+							La contraseña debe tener al menos una mayúscula, minúscula, simbolo, número y mayor a 8 caracteres
+						</mat-error>
 					</mat-form-field>
 
 					<button mat-raised-button color="primary">RESTABLECER</button>
 
 					<div>
-						<div class="content__redirect" [routerLink]="pathLogin">
+						<div class="content__redirect">
 							<span>Si ya tienes una cuenta</span>
-							<a>ingresa</a>
+							<a [routerLink]="pathLogin">ingresa</a>
 						</div>
 
-						<div class="content__redirect" [routerLink]="pathRegister">
+						<div class="content__redirect">
 							<span>Si no tienes una cuenta</span>
-							<a>regístrate</a>
+							<a [routerLink]="pathRegister">regístrate</a>
 						</div>
 					</div>
 				</form>
