--- a/src/app/commons/components/container/components/header/header.component.html
+++ b/src/app/commons/components/container/components/header/header.component.html
@@ -9,15 +9,15 @@
 			<input type="text" autocomplete="off" placeholder="Buscar..." />
 		</div>
 
-		<div>
-			<button mat-button color="primary" [routerLink]="loginPath">INGRESAR</button>
-			<button mat-button color="accent" [routerLink]="registerPath">REGÍSTRATE</button>
+		<div *ngIf="!showUser">
+			<button mat-button color="primary" [routerLink]="[loginPath]">INGRESAR</button>
+			<button mat-button color="accent" [routerLink]="[registerPath]">REGÍSTRATE</button>
 		</div>
 
-		<!-- <div class="header__user">
-			<h3>Usuario</h3>
-			<button mat-button color="primary">MI CUENTA</button>
-			<button mat-button color="accent">CERRAR SESIÓN</button>
-		</div> -->
+		<div *ngIf="showUser" class="header__user">
+			<h3>{{ userName }}</h3>
+			<button mat-button color="primary" *ngIf="!isAdmin" [routerLink]="myAccountPath">MI CUENTA</button>
+			<button mat-button color="accent" (click)="clickLogout()">CERRAR SESIÓN</button>
+		</div>
 	</header>
 </div>
