--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -4,20 +4,25 @@
 		<mat-card class="container__card custom-card flex-column">
 			<mat-card-title><h4>INICIO DE SESION</h4></mat-card-title>
 			<mat-card-content>
-				<form class="content flex-column" autocomplete="off">
+				<form class="content flex-column" autocomplete="off" [formGroup]="formGroup" (ngSubmit)="clickLogin()">
 					<mat-form-field appearance="outline">
 						<mat-label>E-mail</mat-label>
-						<input matInput type="email" />
+						<input matInput type="email" autocomplete="off" min="1" formControlName="email" />
+						<mat-error *ngIf="formGroup.controls.email.hasError('required')">EL email es requerido</mat-error>
+						<mat-error *ngIf="formGroup.controls.email.hasError('email')">Ingrese un E-mail valido</mat-error>
 					</mat-form-field>
 
 					<mat-form-field appearance="outline">
 						<mat-label>Contraseña</mat-label>
-						<input matInput type="password" />
+						<input matInput type="password" autocomplete="off" min="1" formControlName="password" />
+						<mat-error *ngIf="formGroup.controls.password.hasError('required')">Ingrese su contraseña</mat-error>
 					</mat-form-field>
 
 					<div class="content__login flex-column">
-						<span [routerLink]="pathRecovery">¿Olvidaste tu contraseña?</span>
-						<button mat-raised-button color="primary" type="button" (click)="clickLogin()">INGRESAR</button>
+						<span [routerLink]="pathRecovery"> ¿Olvidaste tu contraseña?</span>
+						<button mat-raised-button color="primary" [disabled]="disabledButton" (click)="clickLogin()">
+							INGRESAR
+						</button>
 					</div>
 
 					<div class="content__register">
