--- a/src/app/pages/maintenance/maintenance-buy-page/maintenance-buy-page.component.html
+++ b/src/app/pages/maintenance/maintenance-buy-page/maintenance-buy-page.component.html
@@ -1,47 +1,57 @@
 <div>
 	<h2>Ventas</h2>
 	<div class="content flex-column">
-		<div class="content__filter">
+		<div class="content__filter" [formGroup]="formGroup">
 			<mat-form-field appearance="outline">
 				<mat-label>Fecha de inicio</mat-label>
-				<input matInput [matDatepicker]="pickerInit" />
+				<input matInput [matDatepicker]="pickerInit" formControlName="dateInit" autocomplete="off" />
 				<mat-datepicker-toggle matSuffix [for]="pickerInit"></mat-datepicker-toggle>
 				<mat-datepicker #pickerInit></mat-datepicker>
 			</mat-form-field>
 
 			<mat-form-field appearance="outline">
 				<mat-label>Fecha fin</mat-label>
-				<input matInput [matDatepicker]="pickerFin" />
+				<input matInput [matDatepicker]="pickerFin" formControlName="dateEnd" autocomplete="off" />
 				<mat-datepicker-toggle matSuffix [for]="pickerFin"></mat-datepicker-toggle>
 				<mat-datepicker #pickerFin></mat-datepicker>
 			</mat-form-field>
 		</div>
 
 		<div>
-			<button mat-raised-button color="primary">CONSULTAR</button>
-			<button mat-raised-button color="accent" style="margin-left: 10px">LIMPIAR</button>
+			<button mat-raised-button color="primary" (click)="clickQuery()">CONSULTAR</button>
+			<button mat-raised-button color="accent" style="margin-left: 10px" (click)="clickClear()">LIMPIAR</button>
 		</div>
 
 		<div class="mat-elevation-z8">
 			<table mat-table [dataSource]="dataSource">
-				<ng-container matColumnDef="position">
-					<th mat-header-cell *matHeaderCellDef>No.</th>
-					<td mat-cell *matCellDef="let element">{{ element.position }}</td>
+				<ng-container matColumnDef="customer">
+					<th mat-header-cell *matHeaderCellDef>CLIENTE</th>
+					<td mat-cell *matCellDef="let element">{{ element.fullName }}</td>
 				</ng-container>
 
-				<ng-container matColumnDef="name">
-					<th mat-header-cell *matHeaderCellDef>Name</th>
-					<td mat-cell *matCellDef="let element">{{ element.name }}</td>
+				<ng-container matColumnDef="event">
+					<th mat-header-cell *matHeaderCellDef>EVENTO</th>
+					<td mat-cell *matCellDef="let element">{{ element.title }}</td>
 				</ng-container>
 
-				<ng-container matColumnDef="weight">
-					<th mat-header-cell *matHeaderCellDef>Weight</th>
-					<td mat-cell *matCellDef="let element">{{ element.weight }}</td>
+				<ng-container matColumnDef="ticketsQuantity">
+					<th mat-header-cell *matHeaderCellDef>NRO. ENTRADAS</th>
+					<td mat-cell *matCellDef="let element">{{ element.quantity }}</td>
 				</ng-container>
 
-				<ng-container matColumnDef="symbol">
-					<th mat-header-cell *matHeaderCellDef>Symbol</th>
-					<td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
+				<ng-container matColumnDef="totalSale">
+					<th mat-header-cell *matHeaderCellDef>PAGO</th>
+					<td mat-cell *matCellDef="let element">{{ element.total }}</td>
+				</ng-container>
+
+				<ng-container matColumnDef="saleDate">
+					<th mat-header-cell *matHeaderCellDef>FECHA DE VENTA</th>
+					<td mat-cell *matCellDef="let element">{{ element.saleDate }}</td>
+				</ng-container>
+
+				<ng-container matColumnDef="dateEvent">
+					<th mat-header-cell *matHeaderCellDef>FECHA DE EVENTO</th>
+					<td mat-cell *matCellDef="let element">{{ element.dateEvent }}</td>
 				</ng-container>
 
 				<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -51,7 +61,7 @@
 					<td class="mat-cell" colspan="4">No se encontraron coincidencias</td>
 				</tr>
 			</table>
-			<mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons> </mat-paginator>
+			<mat-paginator #paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons> </mat-paginator>
 		</div>
 	</div>
 </div>
