--- a/src/app/pages/maintenance/maintenance-events-page/event-table/event-table.component.html
+++ b/src/app/pages/maintenance/maintenance-events-page/event-table/event-table.component.html
@@ -5,42 +5,70 @@
 	</mat-form-field>
 
 	<div class="mat-elevation-z8">
-		<table mat-table [dataSource]="dataSource">
-			<ng-container matColumnDef="position">
-				<th mat-header-cell *matHeaderCellDef>No.</th>
-				<td mat-cell *matCellDef="let element">{{ element.position }}</td>
+		<table #table mat-table [dataSource]="dataSource">
+			<ng-container matColumnDef="imageUrl">
+				<th mat-header-cell *matHeaderCellDef>Imagen</th>
+				<td mat-cell *matCellDef="let element">
+					<img *ngIf="element.imageUrl" class="image-event" [src]="element.imageUrl" />
+				</td>
 			</ng-container>
 
-			<ng-container matColumnDef="name">
-				<th mat-header-cell *matHeaderCellDef>Name</th>
-				<td mat-cell *matCellDef="let element">{{ element.name }}</td>
+			<ng-container matColumnDef="title">
+				<th mat-header-cell *matHeaderCellDef>Título</th>
+				<td mat-cell *matCellDef="let element">{{ element.title }}</td>
 			</ng-container>
 
-			<ng-container matColumnDef="weight">
-				<th mat-header-cell *matHeaderCellDef>Weight</th>
-				<td mat-cell *matCellDef="let element">{{ element.weight }}</td>
+			<ng-container matColumnDef="description">
+				<th mat-header-cell *matHeaderCellDef>Descripción</th>
+				<td mat-cell *matCellDef="let element">{{ element.description }}</td>
 			</ng-container>
 
-			<ng-container matColumnDef="symbol">
-				<th mat-header-cell *matHeaderCellDef>Symbol</th>
-				<td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
+			<ng-container matColumnDef="dateEvent">
+				<th mat-header-cell *matHeaderCellDef>Fecha y hora</th>
+				<td mat-cell *matCellDef="let element">{{ element.dateEvent | date : 'dd/MM/yyyy' }}</td>
+			</ng-container>
+
+			<ng-container matColumnDef="ticketsQuantity">
+				<th mat-header-cell *matHeaderCellDef>Cant. Entradas</th>
+				<td mat-cell *matCellDef="let element">{{ element.ticketsQuantity }}</td>
+			</ng-container>
+
+			<ng-container matColumnDef="price">
+				<th mat-header-cell *matHeaderCellDef>Precio</th>
+				<td mat-cell *matCellDef="let element">
+					{{ element.unitPrice | customCurrency }}
+				</td>
+			</ng-container>
+
+			<ng-container matColumnDef="genre">
+				<th mat-header-cell *matHeaderCellDef>Género</th>
+				<td mat-cell *matCellDef="let element">{{ element.genre }}</td>
+			</ng-container>
+
+			<ng-container matColumnDef="status">
+				<th mat-header-cell *matHeaderCellDef>Estado</th>
+				<td mat-cell *matCellDef="let element">{{ element.status }}</td>
 			</ng-container>
 
 			<ng-container matColumnDef="action">
 				<th mat-header-cell *matHeaderCellDef></th>
 				<td mat-cell *matCellDef="let element">
-					<button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+					<button mat-icon-button [matMenuTriggerFor]="menu">
 						<mat-icon>more_vert</mat-icon>
 					</button>
 
 					<mat-menu #menu="matMenu">
-						<button mat-menu-item>
+						<button mat-menu-item (click)="clickDelete(element.id)">
 							<mat-icon color="warn">delete</mat-icon>
 							<span>Eliminar</span>
 						</button>
-						<button mat-menu-item>
+						<button mat-menu-item (click)="clickUpdate(element.id)">
 							<mat-icon color="primary">edit</mat-icon>
 							<span>Editar</span>
+						</button>
+						<button mat-menu-item (click)="clickFinalize(element.id)">
+							<mat-icon color="primary">free_cancellation</mat-icon>
+							<span>Finalizar</span>
 						</button>
 					</mat-menu>
 				</td>
@@ -51,7 +79,7 @@
 
 			<!-- Row shown when there is no matching data. -->
 			<tr class="mat-row" *matNoDataRow>
-				<td class="mat-cell" colspan="4">No data matching the filter "{{ input.value }}"</td>
+				<td class="mat-cell" colspan="4">No existe información para: "{{ input.value }}"</td>
 			</tr>
 		</table>
 		<mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons> </mat-paginator>
