--- a/src/app/pages/maintenance/maintenance.component.html
+++ b/src/app/pages/maintenance/maintenance.component.html
@@ -1,6 +1,6 @@
 <div class="container flex-column">
 	<div class="container__menu">
-		<app-card-menus />
+		<app-card-menus [menus]="menuAdmin" />
 	</div>
 	<router-outlet />
 </div>
