--- a/src/app/pages/my-account/my-account.component.html
+++ b/src/app/pages/my-account/my-account.component.html
@@ -1,6 +1,6 @@
 <div class="container flex-column">
 	<div class="container__menu">
-		<app-card-menus></app-card-menus>
+		<app-card-menus />
 	</div>
 	<router-outlet></router-outlet>
 </div>
