--- a/src/app/pages/register-page/register-page.component.html
+++ b/src/app/pages/register-page/register-page.component.html
@@ -5,51 +5,70 @@
 			<mat-card-title><h4>REGISTRO</h4></mat-card-title>
 
 			<mat-card-content>
-				<form class="content flex-column" autocomplete="off">
+				<form class="content flex-column" autocomplete="off" [formGroup]="formGroup">
 					<mat-form-field appearance="outline">
 						<mat-label>Nombres</mat-label>
-						<input matInput type="text" />
+						<input matInput type="text" formControlName="firstName" />
+						<mat-error *ngIf="firtsField.hasError('required')"> Ingrese sus nombres </mat-error>
 					</mat-form-field>
 
 					<mat-form-field appearance="outline">
 						<mat-label>Apellidos</mat-label>
-						<input matInput type="text" />
+						<input matInput type="text" formControlName="lastName" />
+						<mat-error *ngIf="lastNameField.hasError('required')"> Ingrese sus apellidos </mat-error>
 					</mat-form-field>
 
-					<mat-form-field appearance="outline">
+					<mat-form-field appearance="outline" subscriptSizing="dynamic">
 						<mat-label>E-mail</mat-label>
-						<input matInput type="email" />
+						<input matInput type="email" formControlName="email" />
+						<mat-error *ngIf="emailField.hasError('required')">Ingrese su e-mail </mat-error>
+						<mat-error *ngIf="emailField.hasError('email')"> Ingrese un e-mail valido </mat-error>
 					</mat-form-field>
 
 					<mat-form-field appearance="outline">
 						<mat-label>Edad</mat-label>
-						<input matInput type="number" />
+						<input matInput type="number" formControlName="age" />
 					</mat-form-field>
 
-					<mat-form-field appearance="outline">
+					<mat-form-field appearance="outline" subscriptSizing="dynamic">
 						<mat-label>Contraseña</mat-label>
-						<input matInput type="password" />
+						<input matInput type="password" formControlName="password" />
+						<mat-error *ngIf="passwordField.hasError('customPasswordValidator')">
+							La contraseña debe tener al menos una mayúscula, minúscula, simbolo, número y mayor o igual a 8 caracteres
+						</mat-error>
+						<mat-error *ngIf="passwordField.hasError('required')"> Ingrese una contraseña </mat-error>
 					</mat-form-field>
 
-					<mat-form-field appearance="outline">
+					<mat-form-field appearance="outline" subscriptSizing="dynamic">
 						<mat-label>Repetir contraseña</mat-label>
-						<input matInput type="password" />
+						<input
+							matInput
+							type="password"
+							formControlName="confirmPassword"
+							[errorStateMatcher]="passwordStateMatcher"
+						/>
+						<mat-error *ngIf="confirmPasswordField.hasError('required')"> Ingrese una contraseña </mat-error>
+						<mat-error *ngIf="formGroup.hasError('crossConfirmPasswordError')">
+							La contraseña no coincide, verifique
+						</mat-error>
 					</mat-form-field>
 
 					<mat-form-field appearance="outline">
 						<mat-label>Documento</mat-label>
-						<mat-select>
-							<mat-option> DNI </mat-option>
-							<mat-option> C.E </mat-option>
+						<mat-select formControlName="typeDocument">
+							<mat-option value="1"> DNI </mat-option>
+							<mat-option value="2"> C.E </mat-option>
 						</mat-select>
+						<mat-error *ngIf="typeDocumentField.hasError('required')"> Seleccione un documento </mat-error>
 					</mat-form-field>
 
 					<mat-form-field appearance="outline">
 						<mat-label>Nro Documento</mat-label>
-						<input matInput type="text" />
+						<input matInput type="text" formControlName="documentNumber" />
+						<mat-error *ngIf="documentNumberField.hasError('required')"> Ingrese el nro de documento </mat-error>
 					</mat-form-field>
 
-					<button mat-raised-button color="primary">REGISTRARSE</button>
+					<button mat-raised-button color="primary" (click)="clickRegister()">REGISTRARSE</button>
 
 					<div class="content__register">
 						<span>Si ya tienes una cuenta </span>
