--- a/src/app/pages/maintenance/maintenance-events-page/maintenance-events-page.component.html
+++ b/src/app/pages/maintenance/maintenance-events-page/maintenance-events-page.component.html
@@ -2,7 +2,12 @@
 	<h2>Eventos</h2>
 
 	<div class="content">
-		<mat-tab-group mat-align-tabs="center" backgroundColor="primary">
+		<mat-tab-group
+			mat-align-tabs="center"
+			backgroundColor="primary"
+			[selectedIndex]="indexTabSaveEvent"
+			(selectedIndexChange)="indexTabSaveEvent = $event"
+		>
 			<mat-tab backgroundColor="primary">
 				<ng-template mat-tab-label>
 					<mat-icon class="example-tab-icon">playlist_add</mat-icon>
@@ -16,7 +21,7 @@
 					<mat-icon class="example-tab-icon">list</mat-icon>
 					LISTADO
 				</ng-template>
-				<app-event-table />
+				<app-event-table (clickUpdate)="indexTabSaveEvent = 0" />
 			</mat-tab>
 		</mat-tab-group>
 	</div>
