--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
 @use './assets/styles/colors.scss';
+@import 'node_modules/@costlydeveloper/ngx-awesome-popup/styles/theme';
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
